DATE       AUTHOR       CHANGE
---------- ------------ -------------------------------------------------------
2005-05-13 allenb       Added a couple of globs to utils to test out.
2005-04-14 allenb       Moved over to subversion.
2004-11-17 allenb       Added utility method to get a relative path
                        from a known path and base directory.
2004-11-10 allenb       Refactored AutoDist to make better use of FileBundles.
                        Now packages can have multiple file bundles and
                        files bundles can have their own install prefix.
                        Fix relative path handling with FileBundles.
2004-09-24 allenb       Updated Boost python to get more info from python
                        about current version, libs, etc.  This allows building
                        with 2.2 or 2.3 (or future versions hopefully).
2004-05-31 allenb       Added option to updateEnv for boost and vapor options
                        to explicitly tell it to update CPPPATH with include
                        paths.
2004-04-16 allenb       Removed auto-creation of install alias in AutoDist.
                        This was causing problems when multiple packages
                        install to the same prefix.
2004-04-14 allenb       Added RPM packager.
2004-04-14 allenb       Added support for packagers.
2004-04-13 allenb       Refactor AutoDist to make it handle files and prefixes
                        better.
2004-03-25 allenb       Require param to boost option stating wether to use
                        debug and multi-threaded libraries.  This should help
                        avoid problems that occur if you just let the defaults
                        get used.
2004-03-09 allenb       Updated pyste builder to scons 0.95
2004-03-06 allenb       Updated the autodist factory methods for libs and
                        programs to use the package environment by default.